--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,8 @@
     "@hookform/resolvers": "^3.3.4",
     "date-fns": "^3.3.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "react-plaid-link": "^3.5.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
