--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -17,7 +17,11 @@ aws-sdk-ssm = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 jsonwebtoken = "9"
-argon2 = { version = "0.5", features = ["std"] }
+aws-sdk-cognitoidentityprovider = "1"
+hmac = "0.12"
+sha2 = "0.10"
+hex = "0.4"
+base64 = "0.22"
 rand = { version = "0.8", features = ["getrandom"] }
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
