--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,101 +1,101 @@
-name: CI
+# name: CI
 
-on:
-  push:
-    branches: [main, intial-dev]
-  pull_request:
+# on:
+#   push:
+#     branches: [main, intial-dev]
+#   pull_request:
 
-jobs:
-  changes:
-    runs-on: ubuntu-latest
-    outputs:
-      ios: ${{ steps.filter.outputs.ios }}
-      backend: ${{ steps.filter.outputs.backend }}
-      infra: ${{ steps.filter.outputs.infra }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            ios:
-              - 'apps/ios/**'
-            backend:
-              - 'apps/backend/**'
-            infra:
-              - 'infrastructure/**'
+# jobs:
+#   changes:
+#     runs-on: ubuntu-latest
+#     outputs:
+#       ios: ${{ steps.filter.outputs.ios }}
+#       backend: ${{ steps.filter.outputs.backend }}
+#       infra: ${{ steps.filter.outputs.infra }}
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: dorny/paths-filter@v3
+#         id: filter
+#         with:
+#           filters: |
+#             ios:
+#               - 'apps/ios/**'
+#             backend:
+#               - 'apps/backend/**'
+#             infra:
+#               - 'infrastructure/**'
 
-  test-ios:
-    runs-on: macos-15
-    needs: changes
-    if: needs.changes.outputs.ios == 'true'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Cache Swift Package Manager
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/Library/Developer/Xcode/DerivedData
-            apps/ios/.build
-          key: spm-${{ runner.os }}-${{ hashFiles('apps/ios/**/Package.resolved') }}
-          restore-keys: spm-${{ runner.os }}-
-      - name: Build iOS
-        run: |
-          xcodebuild build \
-            -project apps/ios/OvaFlus.xcodeproj \
-            -scheme OvaFlus \
-            -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=18.5' \
-            -allowProvisioningUpdates \
-            CODE_SIGNING_ALLOWED=NO
+#   test-ios:
+#     runs-on: macos-15
+#     needs: changes
+#     if: needs.changes.outputs.ios == 'true'
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Cache Swift Package Manager
+#         uses: actions/cache@v4
+#         with:
+#           path: |
+#             ~/Library/Developer/Xcode/DerivedData
+#             apps/ios/.build
+#           key: spm-${{ runner.os }}-${{ hashFiles('apps/ios/**/Package.resolved') }}
+#           restore-keys: spm-${{ runner.os }}-
+#       - name: Build iOS
+#         run: |
+#           xcodebuild build \
+#             -project apps/ios/OvaFlus.xcodeproj \
+#             -scheme OvaFlus \
+#             -destination 'platform=iOS Simulator,name=iPhone 16 Pro,OS=18.5' \
+#             -allowProvisioningUpdates \
+#             CODE_SIGNING_ALLOWED=NO
 
-  test-backend:
-    runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.backend == 'true'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: aarch64-unknown-linux-musl
-          components: clippy
-      - name: Cache Rust dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: apps/backend
-      - name: Install cargo-lambda
-        run: pip install cargo-lambda
-      - name: Cargo check
-        working-directory: apps/backend
-        run: cargo check
-      - name: Cargo clippy
-        working-directory: apps/backend
-        run: cargo clippy -- -D warnings
+#   test-backend:
+#     runs-on: ubuntu-latest
+#     needs: changes
+#     if: needs.changes.outputs.backend == 'true'
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Install Rust stable
+#         uses: dtolnay/rust-toolchain@stable
+#         with:
+#           targets: aarch64-unknown-linux-musl
+#           components: clippy
+#       - name: Cache Rust dependencies
+#         uses: Swatinem/rust-cache@v2
+#         with:
+#           workspaces: apps/backend
+#       - name: Install cargo-lambda
+#         run: pip install cargo-lambda
+#       - name: Cargo check
+#         working-directory: apps/backend
+#         run: cargo check
+#       - name: Cargo clippy
+#         working-directory: apps/backend
+#         run: cargo clippy -- -D warnings
 
-  cdk-diff:
-    runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.infra == 'true'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: infrastructure/package-lock.json
-      - name: Install CDK dependencies
-        working-directory: infrastructure
-        run: npm ci
-      - name: CDK Synth
-        working-directory: infrastructure
-        env:
-          CDK_DEFAULT_ACCOUNT: ${{ vars.AWS_ACCOUNT_ID }}
-          CDK_DEFAULT_REGION: ${{ vars.AWS_REGION }}
-        run: |
-          npx cdk synth \
-            -c jwtSecret=placeholder \
-            -c plaidClientId=placeholder \
-            -c plaidSecret=placeholder \
-            -c plaidEnv=placeholder \
-            -c finnhubApiKey=placeholder
+#   cdk-diff:
+#     runs-on: ubuntu-latest
+#     needs: changes
+#     if: needs.changes.outputs.infra == 'true'
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+#           cache: 'npm'
+#           cache-dependency-path: infrastructure/package-lock.json
+#       - name: Install CDK dependencies
+#         working-directory: infrastructure
+#         run: npm ci
+#       - name: CDK Synth
+#         working-directory: infrastructure
+#         env:
+#           CDK_DEFAULT_ACCOUNT: ${{ vars.AWS_ACCOUNT_ID }}
+#           CDK_DEFAULT_REGION: ${{ vars.AWS_REGION }}
+#         run: |
+#           npx cdk synth \
+#             -c jwtSecret=placeholder \
+#             -c plaidClientId=placeholder \
+#             -c plaidSecret=placeholder \
+#             -c plaidEnv=placeholder \
+#             -c finnhubApiKey=placeholder
